--- a/manifest.yml
+++ b/manifest.yml
@@ -5,7 +5,7 @@ applications:
   command: node app.js
   path: .
   instances: 1
-  memory: 128G
+  memory: 128M
   env:
     NODE_ENV: staging
     
